<resources>
    <string name="app_name">MQTT Client</string>
    <string name="title_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="clientID">ClientID</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="portHint">1883</string>
    <string name="serverURIHint">example.example.com</string>
    <string name="newConnection">New Connection</string>
    <string name="newConnectionShort">+</string>

    <string name="leave_tpc">Missing the topic box</string>
    <string name="leave_msg">Missing the message box</string>
    <string name="leave_msg_tpc">Not all fields are filled</string>
    <string name="msg_published">Messege bublished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>


</resources>
