<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matt.client.alexiv.SettingsFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dip" >

        <LinearLayout
            android:id="@+id/clientIdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/clientIDTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:text="@string/clientID" />

            <EditText
                android:id="@+id/clientId"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:inputType="text"
                android:hint="AndroidKT"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/serverGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@id/clientIdGroup" >

            <TextView
                android:id="@+id/serverTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/server" />

            <AutoCompleteTextView
                android:id="@+id/serverURI"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="192.168.5.212"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/portGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@id/serverGroup" >

            <TextView
                android:id="@+id/portTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dip"
                android:text="@string/port" />

            <EditText
                android:id="@+id/port"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="@string/portHint"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/saveSettings"
            android:layout_width="124dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:text="Save" />

    </RelativeLayout>

</FrameLayout>
